--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="./assets/js/encoder.js"></script>
+  <script>
+    var global = window;
+  </script>
 </head>
 <body>
   <app-root></app-root>
