--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- we connect tradingView chart -->
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  
   <script src="./assets/js/encoder.js"></script>
   <script>
     var global = window;
