--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <title>Exrates</title>
   <base href="/">
 
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+  <!--<meta name="viewport" content="width=1200">-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- we connect tradingView chart -->
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
