Add implementation of sending data to gtag.

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,9 @@
   <script src="./assets/js/encoder.js"></script>
   <script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>
   <script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPR6SBC"
+                    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <script src="./assets/js/gtag/gtag_handler"></script>
   <script>
     var global = window;
   </script>
