--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,13 @@
   </script>
 </head>
 <body>
+  <div id="google_translate_element"></div>
   <app-root></app-root>
+  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({ pageLanguage: 'en' }, 'google_translate_element');
+    }
+  </script>
+  <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async=""></script>
 </body>
 </html>
