--- a/src/index.html
+++ b/src/index.html
@@ -11,19 +11,18 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- we connect tradingView chart -->
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75711135-3"></script>
   <script src="./assets/js/encoder.js"></script>
   <script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>
   <script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>
   <script src="./assets/js/gtag/gtag_handler"></script>
+  
 
   <script>
     var global = window;
   </script>
 </head>
 <body>
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TZTXSSP"
-                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <app-root></app-root>
 </body>
 </html>
