--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- we connect tradingView chart -->
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75711135-3"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75711135-3"></script> -->
   <script src="./assets/js/encoder.js"></script>
   <script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>
   <script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>
