fixed DEVEX-1196 and DEVEX-1159

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,7 @@
   <script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>
   <script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>
   <script src="./assets/js/gtag/gtag_handler"></script>
-
-
+  <script src="./assets/js/polifills.js"></script>
   <script>
     var global = window;
   </script>
