--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,17 @@
     }
   </script>
   <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async=""></script>
+  <script>
+    setInterval(function(){
+      document.querySelector(".banner-content-inner").classList.remove("active");
+      document.querySelector(".banner-content-inner").nextElementSibling.classList.add("active");
+      setTimeout(function(){
+        var firstBanner = document.querySelector(".banner-content >.banner-content-inner:first-child");
+        var lastBanner = document.querySelector(".banner-content >.banner-content-inner:last-child");
+        var parrentBanner = document.querySelector(".banner-content");
+        parrentBanner.insertBefore(firstBanner,lastBanner.nextSibling);
+      },1000)
+    },20000)
+  </script>
 </body>
 </html>
