remove banner script

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     }
   </script>
   <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async=""></script>
-  <script>
+  <!-- <script>
     setInterval(function(){
       document.querySelector(".banner-content-inner").classList.remove("active");
       document.querySelector(".banner-content-inner").nextElementSibling.classList.add("active");
@@ -49,6 +49,6 @@
         parrentBanner.insertBefore(firstBanner,lastBanner.nextSibling);
       },1000)
     },20000)
-  </script>
+  </script> -->
 </body>
 </html>
