--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,13 @@
 
 </head>
 <body>
+
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPR6SBC"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+
   <app-root></app-root>
   <script type="text/javascript">
     function googleTranslateElementInit() {
