--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,11 @@
   <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75711135-3"></script> -->
   <script src="./assets/js/encoder.js"></script>
-  <script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>
-  <script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>
+
+  <!--<script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>-->
+  <!--<script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>-->
+
+
   <script src="./assets/js/gtag/gtag_handler"></script>
   <script>
     var global = window;
