--- a/src/index.html
+++ b/src/index.html
@@ -45,6 +45,8 @@
     }
   </script>
   <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async=""></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+  <script src="assets/js/paralax.js"></script>
   <!-- <script>
     setInterval(function(){
       document.querySelector(".banner-content-inner").classList.remove("active");
