--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,8 @@
   <meta charset="utf-8">
   <title>Exrates</title>
   <base href="/">
-
-  <!--<meta name="viewport" content="width=1200">-->
-  <!--<meta name="viewport" content="width=1200, initial-scale=1">-->
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- we connect tradingView chart -->
-  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-75711135-3"></script> -->
-  <script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>
-  <script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>
-  <script src="./assets/js/gtag/gtag_handler"></script>
-  <script>
-    var global = window;
-  </script>
-  <!-- Google Tag Manager -->
   <script>
     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
       new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -26,23 +13,19 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-TPR6SBC');
 </script>
-<!-- End Google Tag Manager -->
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script src="./assets/js/datafeeds/udf/dist/polyfills.js"></script>
+  <script src="./assets/js/datafeeds/udf/dist/bundle.js"></script>
+  <script src="./assets/js/gtag/gtag_handler"></script>
+  <script>
+    var global = window;
+  </script>
 
 </head>
 <body>
-
-  <!-- Google Tag Manager (noscript) -->
   <noscript>
-    <iframe
-      src="https://www.googletagmanager.com/ns.html?id=GTM-TPR6SBC"
-      height="0"
-      width="0"
-      style="display:none;visibility:hidden"
-    ></iframe>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TPR6SBC" height="0" width="0" style="display:none;visibility:hidden"></iframe>
   </noscript>
-    <!-- End Google Tag Manager (noscript) -->
-
-
   <app-root></app-root>
   <script type="text/javascript">
     function googleTranslateElementInit() {
@@ -52,18 +35,6 @@
   <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" async=""></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="assets/js/paralax.js"></script>
-  <!-- <script>
-    setInterval(function(){
-      document.querySelector(".banner-content-inner").classList.remove("active");
-      document.querySelector(".banner-content-inner").nextElementSibling.classList.add("active");
-      setTimeout(function(){
-        var firstBanner = document.querySelector(".banner-content >.banner-content-inner:first-child");
-        var lastBanner = document.querySelector(".banner-content >.banner-content-inner:last-child");
-        var parrentBanner = document.querySelector(".banner-content");
-        parrentBanner.insertBefore(firstBanner,lastBanner.nextSibling);
-      },1000)
-    },20000)
-  </script> -->
   <script src="assets/js/zopimChat.js"></script>
 </body>
 </html>
